# modern-python-guidance

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: check-python-release.yml  ci.yml  publish.yml
bench/: MANUAL.md  mcp-config.json  prompt-v2.txt  prompt-v3-mcp.txt  prompt-v3.txt  prompt-v4-b.txt  prompt-v4-c.txt  prompt.txt  run-mcp.sh  run-v4.sh  run-v5.sh  run.sh  score-v2.sh  score-v3.sh  score-v4.sh  score.sh  score_v5.py  test-scorer.sh
bench/fixtures/edge-cases/: opus48_multiline.py  valid_alt_patterns.py
bench/fixtures/variant-a-modern/: pyproject.toml
bench/fixtures/variant-a-modern/src/: app.py  config.py  crawler.py  models.py  scanner.py  utils.py
bench/fixtures/variant-a-outdated/: pyproject.toml  setup.py
bench/fixtures/variant-a-outdated/src/: app.py  config.py  crawler.py  models.py  scanner.py  utils.py
bench/fixtures/variant-b-modern/myapp/: models.py  views.py
bench/fixtures/variant-b-outdated/myapp/: models.py  views.py
bench/fixtures/variant-c-modern/tests/: test_calculator.py
bench/fixtures/variant-c-outdated/tests/: test_calculator.py
bench/prompts/: v5-a-detailed.txt  v5-a-normal.txt  v5-a-terse.txt  v5-b-detailed.txt  v5-b-terse.txt  v5-c-detailed.txt  v5-c-terse.txt
docs/: benchmark-evaluation.md  benchmark-procedure.md  benchmark-v5.md  design.md  effectiveness-benchmark.md
rules/: modern-python.md
scripts/: check-action-pins.sh  verify_wheel_assets.py
skills/modern-python-guidance/: SKILL.md
skills/modern-python-guidance/guides/async/: async-timeout-context.md  exception-groups.md  taskgroup-over-gather.md
skills/modern-python-guidance/guides/data-structures/: dataclass-modern.md  dict-merge-operator.md  match-case-patterns.md
skills/modern-python-guidance/guides/django/: django-async-views.md  django-check-constraints.md  django-json-field.md
skills/modern-python-guidance/guides/fastapi/: fastapi-annotated-depends.md  fastapi-lifespan.md  fastapi-typed-state.md
skills/modern-python-guidance/guides/httpx/: httpx-async-client-reuse.md  httpx-streaming.md
skills/modern-python-guidance/guides/pydantic/: pydantic-v2-config.md  pydantic-v2-model-api.md  pydantic-v2-serialization.md  pydantic-v2-validators.md
skills/modern-python-guidance/guides/pytest/: pytest-parametrize.md  pytest-raises-match.md  pytest-tmp-path.md
skills/modern-python-guidance/guides/sqlalchemy/: sqlalchemy-2-style.md  sqlalchemy-async-session.md  sqlalchemy-mapped-column.md
skills/modern-python-guidance/guides/stdlib/: datetime-utc.md  pathlib-over-os-path.md  removeprefix-removesuffix.md  template-strings.md  tomllib-builtin.md
skills/modern-python-guidance/guides/toolchain/: no-pickle.md  pyproject-toml-over-setup.md  ruff-over-flake8.md  safe-subprocess.md  uv-over-pip.md
skills/modern-python-guidance/guides/typing/: deferred-annotations.md  override-decorator.md  paramspec-decorators.md  type-parameter-syntax.md  typeis-vs-typeguard.md  union-syntax.md  use-builtin-generics.md
src/modern_python_guidance/: __init__.py  __main__.py  check.py  cli.py  compat.py  frontmatter.py  guide_index.py  mcp_server.py  retrieve.py  search.py  setup_cmd.py  uninstall_cmd.py  version_detect.py
tests/: conftest.py  test_benchmark_runner.py  test_check.py  test_ci_workflow.py  test_cli_integration.py  test_cli_unit.py  test_compat.py  test_design_schema.py  test_frontmatter.py  test_guide_index.py  test_guide_structure.py  test_mcp_server.py  test_mcp_unit.py  test_retrieve.py  test_scorer_v5.py  test_search.py  test_setup.py  test_skill_sync.py  test_uninstall.py  test_version_detect.py
