[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "modern-python-guidance"
version = "0.1.0"
description = "Version-aware BAD/GOOD pattern guides that help AI coding agents generate modern Python"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Iori Yoshida", email = "i.yoshida@raksul.com" },
]
keywords = ["python", "modernization", "ai", "coding-agent", "linter", "guidance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "packaging>=23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4.0",
]

[project.scripts]
modern-python-guidance = "modern_python_guidance.cli:main"
mpg = "modern_python_guidance.cli:main"

[project.urls]
Homepage = "https://github.com/yottayoshida/modern-python-guidance"
Repository = "https://github.com/yottayoshida/modern-python-guidance"
Issues = "https://github.com/yottayoshida/modern-python-guidance/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/modern_python_guidance"]
only-include = ["src/modern_python_guidance", "skills"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""
"skills" = "modern_python_guidance/skills"

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "FURB", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
